# sunvox-max

./: .gitignore  CMakeLists.txt  CODE_REVIEW.md  Makefile  README.md
help/: sunvox~.maxhelp
source/projects/sunvox_lib/: CMakeLists.txt
source/projects/sunvox_lib/lib_sundog/sound/: sound.cpp
source/projects/sunvox_lib/lib_sunvox/: sunvox_engine.h
source/projects/sunvox_lib/sunvox_lib/docs/: changelog.txt
source/projects/sunvox_tilde/: CMakeLists.txt  sunvox_tilde.cpp
source/projects/sunvox_tilde/examples/: Makefile  sunvox_dll_config.ini  test1.c  test2.c  test3.c  test4.c  test5.c  test6.c  test7.c  test8.c  test_static.c
source/projects/sunvox_tilde/include/: sunvox.h
source/projects/sunvox_tilde/lib/: libsunvox.dylib
source/projects/sunvox~/: CMakeLists.txt  libsunvox.dylib  sunvox~.c
source/projects/sunvox~/docs/: sunvox_lib.html
source/projects/sunvox~/examples/: MAKE_MACOS  Makefile  README.md  sunvox.dylib  test1.c  test2.c  test3.c  test4.c  test5.c  test6.c  test7.c  test8.c  test_static.c
source/projects/sunvox~/lib/: sunvox.dylib
source/projects/sunvox~/resources/: myproj.sunvox
